--- a/ROOT/assets/css/style.css
+++ b/ROOT/assets/css/style.css
@@ -192,7 +192,7 @@ h6 {
 # Navigation Menu
 --------------------------------------------------------------*/
 /**
-* Desktop Navigation 
+* Desktop Navigation
 */
 .navbar {
   padding: 0;
@@ -304,7 +304,7 @@ h6 {
 }
 
 /**
-* Mobile Navigation 
+* Mobile Navigation
 */
 .mobile-nav-toggle {
   color: #fff;
@@ -1570,4 +1570,14 @@ section {
   text-align: center;
   font-size: 13px;
   color: #fff;
+}
+
+#image_2 {
+  width: 300px;
+  height: 300px;
+  transition: transform 0.3s ease-in-out;
+}
+
+.image-flip {
+  transform: scaleX(-1);
 }
