--- a/ROOT/assets/css/style.css
+++ b/ROOT/assets/css/style.css
@@ -234,7 +234,7 @@ h6 {
 .navbar .active,
 .navbar .active:focus,
 .navbar li:hover>a {
-  color: #ffc451;
+  color: #ffffff;
 }
 
 .navbar .dropdown ul {
