--- a/ROOT/assets/css/style.css
+++ b/ROOT/assets/css/style.css
@@ -293,6 +293,10 @@ h6 {
   visibility: visible;
 }
 
+.phone-link {
+    padding: 10px;
+}
+
 @media (max-width: 1366px) {
   .navbar .dropdown .dropdown ul {
     left: -90%;
