--- a/ROOT/assets/css/style.css
+++ b/ROOT/assets/css/style.css
@@ -203,7 +203,7 @@ h6 {
   padding: 0;
   display: flex;
   list-style: none;
-  align-items: center;
+  align-items: right;
 }
 
 .navbar li {
@@ -213,7 +213,7 @@ h6 {
 .navbar a,
 .navbar a:focus {
   display: flex;
-  align-items: center;
+  align-items: left;
   justify-content: space-between;
   padding: 10px 0 10px 30px;
   font-size: 15px;
