--- a/ROOT/assets/css/style.css
+++ b/ROOT/assets/css/style.css
@@ -341,6 +341,7 @@ h6 {
 .navbar-mobile .mobile-nav-toggle {
   position: absolute;
   top: 15px;
+  left: auto; /* Changed from "right: 15px;" */  
   right: 15px;
 }
 
