--- a/ROOT/assets/css/style.css
+++ b/ROOT/assets/css/style.css
@@ -308,10 +308,13 @@ h6 {
 * Mobile Navigation
 */
 .mobile-nav-toggle {
+  display: block;
+  position: absolute;
+  top: 15px;
+  right: 15px; /* Align toggle to the right */
   color: #fff;
   font-size: 28px;
   cursor: pointer;
-  display: none;
   line-height: 0;
   transition: 0.5s;
 }
@@ -355,7 +358,7 @@ h6 {
   background-color: #fff;
   overflow-y: auto;
   transition: 0.3s;
-  text-align: right; /* Add this line */  
+  text-align: right; /* Add this line */
 }
 
 .navbar-mobile a,
