--- a/ROOT/assets/css/style.css
+++ b/ROOT/assets/css/style.css
@@ -304,31 +304,30 @@ h6 {
   }
 }
 
-/**
-* Mobile Navigation
-*/
-.mobile-nav-toggle {
-  color: #fff;
-  font-size: 28px;
-  cursor: pointer;
-  display: block;
-  position: absolute;
-  top: 15px;
-  right: 15px; /* Align toggle to the right */
-  line-height: 0;
-  transition: 0.5s;
-  text-align: right; /* Add this line */
-}
+
 
 @media (max-width: 991px) {
   .mobile-nav-toggle {
     display: block;
+    position: absolute;
+    top: 15px;
+    right: 15px; /* Align toggle to the right */
+    color: #fff;
+    font-size: 28px;
+    cursor: pointer;
+    line-height: 0;
+    transition: 0.5s;
   }
 
   .navbar ul {
     display: none;
   }
+
+  .navbar-mobile {
+    text-align: right; /* Add this line */
+  }
 }
+
 
 .navbar-mobile {
   position: fixed;
