--- a/ROOT/assets/css/style.css
+++ b/ROOT/assets/css/style.css
@@ -296,38 +296,36 @@ h6 {
 
 @media (max-width: 1366px) {
   .navbar .dropdown .dropdown ul {
-    text-align: right; /* Add this line */
+    left: -90%;
   }
 
   .navbar .dropdown .dropdown:hover>ul {
-    text-align: right; /* Add this line */
+    left: -100%;
   }
 }
 
-
+/**
+* Mobile Navigation
+*/
+.mobile-nav-toggle {
+  color: #fff;
+  font-size: 28px;
+  cursor: pointer;
+  display: none;
+  line-height: 0;
+  transition: 0.5s;  
+  float: right; /* Align to the right */
+}
 
 @media (max-width: 991px) {
   .mobile-nav-toggle {
     display: block;
-    position: absolute;
-    top: 15px;
-    right: 15px; /* Align toggle to the right */
-    color: #fff;
-    font-size: 28px;
-    cursor: pointer;
-    line-height: 0;
-    transition: 0.5s;
   }
 
   .navbar ul {
     display: none;
   }
-
-  .navbar-mobile {
-    text-align: right; /* Add this line */
-  }
 }
-
 
 .navbar-mobile {
   position: fixed;
@@ -358,7 +356,6 @@ h6 {
   background-color: #fff;
   overflow-y: auto;
   transition: 0.3s;
-  text-align: right; /* Add this line */
 }
 
 .navbar-mobile a,
