--- a/ROOT/assets/css/style.css
+++ b/ROOT/assets/css/style.css
@@ -184,7 +184,7 @@ h6 {
 @media (max-width: 992px) {
   .get-started-btn {
     padding: 7px 20px 8px 20px;
-    margin-right: 15px;
+    margin-left: auto;
   }
 }
 
@@ -196,6 +196,7 @@ h6 {
 */
 .navbar {
   padding: 0;
+  margin-left: auto; /* Push the navbar content to the right */
 }
 
 .navbar ul {
@@ -315,13 +316,11 @@ h6 {
   line-height: 0;
   transition: 0.5s;
   float: right; /* Align to the right */
-  margin-left: auto; /* Push the navbar content to the right */
 }
 
 @media (max-width: 991px) {
   .mobile-nav-toggle {
     display: block;
-    margin-left: auto; /* Push the navbar content to the right */
   }
 
   .navbar ul {
