--- a/ROOT/assets/css/style.css
+++ b/ROOT/assets/css/style.css
@@ -183,6 +183,7 @@ h6 {
 
 @media (max-width: 992px) {
   .get-started-btn {
+    display: none; /* Hide the item when collapsed */
     padding: 7px 20px 8px 20px;
     margin-left: auto;
   }
