--- a/ROOT/assets/css/style.css
+++ b/ROOT/assets/css/style.css
@@ -174,6 +174,7 @@ h6 {
   font-size: 14px;
   display: inline-block;
   border: 2px solid #ffc451;
+  margin-left: 15px;
 }
 
 .get-started-btn:hover {
