--- a/ROOT/assets/css/style.css
+++ b/ROOT/assets/css/style.css
@@ -165,6 +165,23 @@ h6 {
 /*--------------------------------------------------------------
 #  Get Startet Button
 --------------------------------------------------------------*/
+.call-now-link {
+  color: #fff;
+  border-radius: 4px;
+  padding: 7px 25px 8px 25px;
+  white-space: nowrap;
+  transition: 0.3s;
+  font-size: 14px;
+  display: inline-block;
+  border: 2px solid #ffc451;
+  margin-left: 15px;
+  color: #151515;
+}
+
+.call-now-link:hover {
+  background: #ffbb38;
+  color: #343a40;
+}
 .get-started-btn {
   color: #fff;
   border-radius: 4px;
@@ -181,7 +198,6 @@ h6 {
   background: #ffbb38;
   color: #343a40;
 }
-
 @media (max-width: 992px) {
   .get-started-btn {
     display: none; /* Hide the item when collapsed */
