--- a/ROOT/assets/css/style.css
+++ b/ROOT/assets/css/style.css
@@ -175,7 +175,7 @@ h6 {
   display: inline-block;
   border: 2px solid #ffc451;
   margin-left: 15px;
-  color: #151515;
+  color: #fff;
 }
 
 .call-now-link:hover {
