--- a/ROOT/assets/css/style.css
+++ b/ROOT/assets/css/style.css
@@ -172,7 +172,7 @@ h6 {
   white-space: nowrap;
   transition: 0.3s;
   font-size: 18px;
-  display: inline-block;
+  display: none;
   margin-left: 15px;
   color: #fff;
 }
@@ -221,7 +221,7 @@ h6 {
     padding: 7px 20px 8px 20px;
     margin-left: auto;
   }
-  .call-now-lin-btn {
+  .call-now-link-btn {
     display: inline-block; /* Hide the item when collapsed */
     padding: 7px 20px 8px 20px;
     margin-left: auto;
