--- a/ROOT/assets/css/style.css
+++ b/ROOT/assets/css/style.css
@@ -177,7 +177,7 @@ h6 {
   color: #fff;
 }
 .call-now-link-btn:hover {
-  color: #343a40;
+  color: #ffbb38;
 }
 .call-now-link {
   color: #fff;
@@ -191,7 +191,7 @@ h6 {
   color: #fff;
 }
 .call-now-link:hover {
-  color: #343a40;
+  color: #ffbb38;
 }
 .get-started-btn {
   color: #fff;
