--- a/ROOT/assets/css/style.css
+++ b/ROOT/assets/css/style.css
@@ -1081,6 +1081,11 @@ section {
     display: none;
   }
 }
+@media (max-width: 667px) {
+  .badges {
+    display: none;
+  }
+}
 /*--------------------------------------------------------------
 # Testimonials
 --------------------------------------------------------------*/
