--- a/ROOT/assets/css/style.css
+++ b/ROOT/assets/css/style.css
@@ -1075,6 +1075,7 @@ section {
 .badges {
   display: inline-block;
   position: relative;
+  text-align: center;
 }
 @media (min-width: 992px) {
   .badges {
