--- a/ROOT/assets/css/style.css
+++ b/ROOT/assets/css/style.css
@@ -1073,7 +1073,7 @@ section {
 }
 
 .badgesmobile {
-  display: flex;
+  display: none;
   justify-content: center;
   align-items: center;
   padding-top: 20px;
