--- a/ROOT/assets/css/style.css
+++ b/ROOT/assets/css/style.css
@@ -396,7 +396,7 @@ h6 {
   bottom: 15px;
   left: 15px;
   padding: 10px 0;
-  background-color: #fff;
+  background-color: #ffc;
   overflow-y: auto;
   transition: 0.3s;
 }
