--- a/ROOT/assets/css/style.css
+++ b/ROOT/assets/css/style.css
@@ -162,6 +162,26 @@ h6 {
   max-height: 64px;
 }
 
+
+.swiper1 {
+   width: 100%;
+   height: 500px;
+   margin-left: auto;
+   margin-right: auto;
+ }
+
+ .swiper-slide1 {
+   text-align: center;
+   font-size: 18px;
+   background: #fff;
+   height: calc((100% - 30px) / 2) !important;
+
+   /* Center slide text vertically */
+   display: flex;
+   justify-content: center;
+   align-items: center;
+ }
+
 /*--------------------------------------------------------------
 #  Get Startet Button
 --------------------------------------------------------------*/
