--- a/ROOT/assets/css/style.css
+++ b/ROOT/assets/css/style.css
@@ -11,6 +11,7 @@
 body {
   font-family: "Open Sans", sans-serif;
   color: #444444;
+  background: red;
 }
 
 a {
@@ -170,7 +171,7 @@ h6 {
    margin-right: auto;
  }
 
- .swiper-slide1 {
+ .swiper-slide {
    text-align: center;
    font-size: 18px;
    background: #fff;
