--- a/ROOT/assets/css/style.css
+++ b/ROOT/assets/css/style.css
@@ -11,7 +11,6 @@
 body {
   font-family: "Open Sans", sans-serif;
   color: #444444;
-  background: red;
 }
 
 a {
@@ -164,7 +163,7 @@ h6 {
 }
 
 
-.swiper1 {
+.swiper-badges {
    width: 100%;
    height: 500px;
    margin-left: auto;
