--- a/ROOT/assets/css/style.css
+++ b/ROOT/assets/css/style.css
@@ -232,7 +232,7 @@ h6 {
 @media (max-width: 992px) {
   .get-started-btn {
     padding: 7px 20px 8px 20px;
-    margin-left: auto;
+    margin-right: 22px;
   }
   .call-now-link {
     display: none; /* Hide the item when collapsed */
