--- a/ROOT/assets/css/style.css
+++ b/ROOT/assets/css/style.css
@@ -289,7 +289,7 @@ h6 {
 .navbar a i,
 .navbar a:focus i {
   font-size: 12px;
-  line-height: 0;
+  line-height: 2.2;
   margin-left: 5px;
 }
 
@@ -397,7 +397,7 @@ h6 {
   right: 0;
   left: 0;
   bottom: 0;
-  background: rgba(155, 0, 0, 0.9);
+  background: black;
   transition: 0.3s;
   z-index: 999;
 }
