--- a/ROOT/assets/css/style.css
+++ b/ROOT/assets/css/style.css
@@ -293,7 +293,14 @@ h6 {
   margin-left: 5px;
 }
 .navbar .mobile-menu-logo{
-  width: 200px
+  width: 200px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 0 20px;
+}
+.navbar .mobile-menu-logo img{
+  width: 100%
 }
 
 .navbar a:hover,
