--- a/ROOT/assets/css/style.css
+++ b/ROOT/assets/css/style.css
@@ -1695,12 +1695,12 @@ section {
   color: #fff;
 }
 #fb-root .fb_dialog_content iframe:first-child{
-  width: 50px;
-  height: 50px;
+  width: 50px !important;
+  height: 50px !important;
 }
 
 #fb-root .fb_dialog_content iframe:first-child svg{
-  width: 20px;
-  height: 20px;
-  margin-bottom: 9px;
+  width: 20px !important;
+  height: 20px !important;
+  margin-bottom: 9px !important;
 }
